--- a/public/culture/index.html
+++ b/public/culture/index.html
@@ -47,7 +47,7 @@
                 
                 <li><a href="http://localhost:1313/leadership/" typeof="ListItem">leadership/</a></li>
                 
-                <li><a href="/test" typeof="ListItem">TEST</a></li>
+                <li><a href="https://rxresu.me/lucas.belcher/lucas-resume" target="_blank" typeof="ListItem">resume/</a></li>
             </ul>
           </nav>
         </div>
