--- a/public/culture/index.html
+++ b/public/culture/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="http://localhost:1313/hugo-theme-console/css/terminal-0.7.2.min.css">
     <link rel="stylesheet" href="http://localhost:1313/hugo-theme-console/css/animate-4.1.1.min.css">
     <link rel="stylesheet" href="http://localhost:1313/hugo-theme-console/css/console.css">
+    <link rel="stylesheet" href="http://localhost:1313/custom.css">
     
       <!--[if lt IE 9]>
           <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -23,7 +24,7 @@
 
 
 <meta name="twitter:title" content=""/>
-<meta name="twitter:description" content=""/>
+<meta name="twitter:description" content="TESTTTT"/>
 
   
 
@@ -56,6 +57,7 @@
     <div class="container animated zoomIn fast" >
         
 <h1></h1>
+<p>TESTTTT</p>
 
 
         <div class="footer">
