--- a/public/culture/index.html
+++ b/public/culture/index.html
@@ -24,7 +24,7 @@
 
 
 <meta name="twitter:title" content=""/>
-<meta name="twitter:description" content="TESTTTT"/>
+<meta name="twitter:description" content=""/>
 
   
 
@@ -57,7 +57,6 @@
     <div class="container animated zoomIn fast" >
         
 <h1></h1>
-<p>TESTTTT</p>
 
 
         <div class="footer">
