--- a/public/skills/index.html
+++ b/public/skills/index.html
@@ -24,7 +24,15 @@
 
 
 <meta name="twitter:title" content=""/>
-<meta name="twitter:description" content="Skills The Buzzwords Java Javascript Python The Context "/>
+<meta name="twitter:description" content="Skills The Buzzwords Code: Java, JS/TS, Python, C#
+Tools &amp; Frameworks: Spring Boot, Flask, React, Next.js, Node.js, Alpine.js
+Data &amp; API: PostgreSQL, MySQL, DynamoDB, REST, GraphQL
+DevOps: AWS, Docker, New Relic, Splunk, Github Actions, Bitbucket Pipelines, Cloudfront, Fastly
+The Context Major Projects include:
+Major Travel Company
+Custom API service layer on top of AEM as a Cloud Service, which is Adobe&rsquo;s enterprise Content Management System.
+Global Investment Management Firm
+Set of microservices that feed financial data to marketing websites with complex business logic"/>
 
   
 
@@ -60,13 +68,29 @@
 <h1 id="skills">Skills</h1>
 <hr>
 <h2 id="the-buzzwords">The Buzzwords</h2>
-<ul>
-<li><code>Java</code></li>
-<li><code>Javascript</code></li>
-<li><code>Python</code></li>
-</ul>
+<p><strong>Code:</strong> Java, JS/TS, Python, C#<br>
+<strong>Tools &amp; Frameworks</strong>: Spring Boot, Flask, React, Next.js, Node.js, Alpine.js<br>
+<strong>Data &amp; API</strong>: PostgreSQL, MySQL, DynamoDB, REST, GraphQL<br>
+<strong>DevOps</strong>: AWS, Docker, New Relic, Splunk, Github Actions, Bitbucket Pipelines, Cloudfront, Fastly</p>
 <hr>
 <h2 id="the-context">The Context</h2>
+<p>Major Projects include:</p>
+<blockquote>
+<p>Major Travel Company<br>
+Custom API service layer on top of AEM as a Cloud Service, which is Adobe&rsquo;s enterprise Content Management System.</p>
+</blockquote>
+<blockquote>
+<p>Global Investment Management Firm<br>
+Set of microservices that feed financial data to marketing websites with complex business logic</p>
+</blockquote>
+<blockquote>
+<p>Commercial Licensed Music Distributor<br>
+Flask app that processes a huge library of licensed music</p>
+</blockquote>
+<blockquote>
+<p>Counter Strike E-Sports League<br>
+Spring boot app that provided an API for stats and league info for a CS:GO league</p>
+</blockquote>
 
 
         <div class="footer">
