--- a/public/culture/index.html
+++ b/public/culture/index.html
@@ -24,7 +24,7 @@
 
 
 <meta name="twitter:title" content=""/>
-<meta name="twitter:description" content=""/>
+<meta name="twitter:description" content="Coming soon&hellip;"/>
 
   
 
@@ -57,6 +57,7 @@
     <div class="container animated zoomIn fast" >
         
 <h1></h1>
+<p>Coming soon&hellip;</p>
 
 
         <div class="footer">
