--- a/public/leadership/index.html
+++ b/public/leadership/index.html
@@ -24,7 +24,7 @@
 
 
 <meta name="twitter:title" content=""/>
-<meta name="twitter:description" content="Test"/>
+<meta name="twitter:description" content="Coming soon&hellip;"/>
 
   
 
@@ -57,7 +57,7 @@
     <div class="container animated zoomIn fast" >
         
 <h1></h1>
-<p>Test</p>
+<p>Coming soon&hellip;</p>
 
 
         <div class="footer">
