--- a/public/skills/index.html
+++ b/public/skills/index.html
@@ -28,11 +28,9 @@
 Tools &amp; Frameworks: Spring Boot, Flask, React, Next.js, Node.js, Alpine.js
 Data &amp; API: PostgreSQL, MySQL, DynamoDB, REST, GraphQL
 DevOps: AWS, Docker, New Relic, Splunk, Github Actions, Bitbucket Pipelines, Cloudfront, Fastly
-The Context Major Projects include:
+The Context Major Project Highlights include:
 Major Travel Company
-Custom API service layer on top of AEM as a Cloud Service, which is Adobe&rsquo;s enterprise Content Management System.
-Global Investment Management Firm
-Set of microservices that feed financial data to marketing websites with complex business logic"/>
+Custom API service layer on top of a CMS that delivered marketing content across 5 different downstream applications via REST and GraphQL APIs."/>
 
   
 
@@ -74,22 +72,22 @@ Set of microservices that feed financial data to marketing websites with complex
 <strong>DevOps</strong>: AWS, Docker, New Relic, Splunk, Github Actions, Bitbucket Pipelines, Cloudfront, Fastly</p>
 <hr>
 <h2 id="the-context">The Context</h2>
-<p>Major Projects include:</p>
+<p>Major Project Highlights include:</p>
 <blockquote>
 <p>Major Travel Company<br>
-Custom API service layer on top of AEM as a Cloud Service, which is Adobe&rsquo;s enterprise Content Management System.</p>
+Custom API service layer on top of a CMS that delivered marketing content across 5 different downstream applications via REST and GraphQL APIs.</p>
 </blockquote>
 <blockquote>
 <p>Global Investment Management Firm<br>
-Set of microservices that feed financial data to marketing websites with complex business logic</p>
+Implemented a set of microservices that feed financial data to marketing websites with complex business logic across 3 continents</p>
 </blockquote>
 <blockquote>
 <p>Commercial Licensed Music Distributor<br>
-Flask app that processes a huge library of licensed music</p>
+Flask app that processes a huge library of licensed music and allows customers to browse the library and listen to samples</p>
 </blockquote>
 <blockquote>
 <p>Counter Strike E-Sports League<br>
-Spring boot app that provided an API for stats and league info for a CS:GO league</p>
+Implemented a REST API and database for stats and league info for a private CS:GO league</p>
 </blockquote>
 
 
