add culture page

--- a/public/index.html
+++ b/public/index.html
@@ -68,6 +68,8 @@
 
 <p>I am currently serving as Technical Director at a consulting agency where I lead multiple dev teams and help manage an entire department of ~30 engineers</p>
 
+<p>I live with in Milwaukee, Wisconsin with my wife of 6 years and 5-year-old son.</p>
+
 <p>
     Find out more about my <a href="/skills">Skills</a> or read about my thoughts on <a href="/leadership">Leadership</a> and <a href="/culture">Culture</a>
 </p>
