--- a/public/culture/index.html
+++ b/public/culture/index.html
@@ -24,7 +24,8 @@
 
 
 <meta name="twitter:title" content=""/>
-<meta name="twitter:description" content="Coming soon&hellip;"/>
+<meta name="twitter:description" content="Culture Culture is defined by more than just the benefits and key value buzzwords that are put on a job posting. Culture is the recognition that people are the most important part of any community, and it represents an investment in those people.
+I believe in a culture that fosters the balance between challenge and skill for each individual. It should treat people as adults, and encourage independence and accountability. It should value transparency and communication as the most important tools for facilitating responsible growth."/>
 
   
 
@@ -57,7 +58,10 @@
     <div class="container animated zoomIn fast" >
         
 <h1></h1>
-<p>Coming soon&hellip;</p>
+<h1 id="culture">Culture</h1>
+<p>Culture is defined by more than just the benefits and key value buzzwords that are put on a job posting. Culture is the recognition that people are the most important part of any community, and it represents an investment in those people.</p>
+<p>I believe in a culture that fosters the balance between challenge and skill for each individual. It should treat people as adults, and encourage independence and accountability. It should value transparency and communication as the most important tools for facilitating responsible growth.</p>
+<p>Most importantly, culture cannot be feigned. It’s a direct reflection of the values that are practiced every day within an organization and over time, it will cultivate a group of people that align with these values, for better or for worse.</p>
 
 
         <div class="footer">
